--- a/client/src/App.css
+++ b/client/src/App.css
@@ -38,3 +38,11 @@
   margin: auto;
   margin-top: 100px;
   }
+
+  .memory {
+    display: flex;
+    flex-wrap: wrap;
+    width: 300px;
+    margin: auto;
+    user-select: none;
+  }
